# poc-vite

./: .dockerignore  .editorconfig  .env.example  .gcloudignore  .gitattributes  .gitignore  .mcp.json  AGENTS..md  CLAUDE.md  Dockerfile.prod  Makefile  README.md  cloudbuild.yaml  delete-me.txt  docker-compose.yml
.claude/agents/: code-reviewer.md
.github/workflows/: ci-cd.yml
.mini_specs/: plan.md  review_backend.md  spec.md  tasks.md
.mini_specs/done/001-init-poc/: plan.md  spec.md
.mini_specs/done/002. tsx, vite-proxy, zod/: spec.md
.mini_specs/done/003. themes + lang/: fase2-identidade-visual.md  spec.md  tasks.md
.mini_specs/done/004. google sign in/: spec.md  tasks.md
.mini_specs/done/005. ci-cd com gha na gcp/: spec.md  tasks.md
backend/: Dockerfile  lint.sh  pyproject.toml  requirements.txt
backend/app/: auth.py  create_tables.py  database.py  main.py  models.py  oauth.py  schemas.py
backend/app/routers/: auth.py  dashboard.py
backend/tests/: __init__.py  conftest.py  test_auth_integration.py  test_oauth.py
docs/: 1.contexto.md  2.duvidas.md  ci-cd.md  deployment.md
docs/chats/: 1.decisao_inicial_claude.md  2.decisao_inicial_codex.md
docs/chats/claude/: 1.decisao_inicial.md
docs/chats/codex/: 2.respondendo_duvidas
docs/poc/: 1.contexto.md  2.duvidas.md
docs/todo/: review_frontend.md  roadmap-deployment.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/e2e/: auth.spec.ts
frontend/src/: App.jsx  App.tsx  index.css  main.tsx  setupTests.ts  vite-env.d.ts
frontend/src/components/: AnimatedBackground.tsx  Chart.jsx  Chart.tsx  ErrorMessage.tsx  GoogleSignInButton.tsx  HeroSection.tsx  LanguageToggle.tsx  Logo.tsx  ProtectedRoute.jsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx  Table.jsx  Table.tsx  ThemeToggle.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/i18n/: index.ts
frontend/src/pages/: Dashboard.jsx  Dashboard.tsx  Login.jsx  Login.test.tsx  (+4 more)
scripts/: README.md  setup-backend.sh  setup-dev.sh  start-chrome-debug.sh  test-production-build.sh
(+19 files in other folders)
